
noinst_LTLIBRARIES = libyaml-cpp.la

libyaml_cpp_la_SOURCES = \
            aliasmanager.h \
            directives.h \
            emitterstate.h \
            indentation.h \
            node.h \
            nodeutil.h \
            ptr_stack.h \
            scanscalar.h \
            stlnode.h \
            token.h \
            anchor.h \
            dll.h \
            emitterutils.h \
            iterator.h \
            nodebuilder.h \
            noncopyable.h \
            ptr_vector.h \
            scantag.h \
            stream.h \
            traits.h \
            binary.h \
            emitfromevents.h \
            eventhandler.h \
            iterpriv.h \
            nodeimpl.h \
            null.h \
            regex.h \
            setting.h \
            streamcharsource.h \
            yaml.h \
            collectionstack.h \
            emitter.h \
            exceptions.h \
            ltnode.h \
            nodeownership.h \
            ostream.h \
            regeximpl.h \
            singledocparser.h \
            stringsource.h \
            conversion.h \
            emittermanip.h \
            exp.h \
            mark.h \
            nodereadimpl.h \
            parser.h \
            scanner.h \
            stlemitter.h \
            tag.h \
            aliasmanager.cpp \
            directives.cpp \
            emitterstate.cpp \
            iterator.cpp \
            nodeownership.cpp \
            parser.cpp \
            scanscalar.cpp \
            simplekey.cpp \
            tag.cpp \
            binary.cpp \
            emitfromevents.cpp \
            emitterutils.cpp \
            node.cpp \
            null.cpp \
            regex.cpp \
            scantag.cpp \
            singledocparser.cpp \
            conversion.cpp \
            emitter.cpp \
            exp.cpp \
            nodebuilder.cpp \
            ostream.cpp \
            scanner.cpp \
            scantoken.cpp \
            stream.cpp

libyaml_cpp_la_CPPFLAGS = -I..    

EXTRADIST = license.txt

